RESOLVED FIXED179863
More FETurbulence cleanup
https://bugs.webkit.org/show_bug.cgi?id=179863
Summary More FETurbulence cleanup
Simon Fraser (smfr)
Reported 2017-11-18 12:39:09 PST
More FETurbulence cleanup
Attachments
Patch (65.47 KB, patch)
2017-11-18 12:42 PST, Simon Fraser (smfr)
zalan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews103 for mac-elcapitan (2.83 MB, application/zip)
2017-11-18 13:36 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (3.01 MB, application/zip)
2017-11-18 13:52 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (3.33 MB, application/zip)
2017-11-18 14:05 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.68 MB, application/zip)
2017-11-18 14:06 PST, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2017-11-18 12:42:45 PST
EWS Watchlist
Comment 2 2017-11-18 13:36:51 PST
Comment on attachment 327317 [details] Patch Attachment 327317 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5293641 New failing tests: svg/W3C-SVG-1.1/filters-turb-02-f.svg svg/W3C-SVG-1.1/filters-turb-01-f.svg svg/W3C-SVG-1.1-SE/types-dom-04-b.svg
EWS Watchlist
Comment 3 2017-11-18 13:36:53 PST
Created attachment 327322 [details] Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 4 2017-11-18 13:52:05 PST
Comment on attachment 327317 [details] Patch Attachment 327317 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5293675 New failing tests: svg/W3C-SVG-1.1/filters-turb-02-f.svg svg/W3C-SVG-1.1/filters-turb-01-f.svg svg/W3C-SVG-1.1-SE/types-dom-04-b.svg
EWS Watchlist
Comment 5 2017-11-18 13:52:07 PST
Created attachment 327323 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 6 2017-11-18 14:05:13 PST
Comment on attachment 327317 [details] Patch Attachment 327317 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/5293679 New failing tests: svg/W3C-SVG-1.1/filters-turb-02-f.svg svg/W3C-SVG-1.1/filters-turb-01-f.svg svg/W3C-SVG-1.1-SE/types-dom-04-b.svg
EWS Watchlist
Comment 7 2017-11-18 14:05:15 PST
Created attachment 327324 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
EWS Watchlist
Comment 8 2017-11-18 14:06:33 PST
Comment on attachment 327317 [details] Patch Attachment 327317 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/5293740 New failing tests: svg/W3C-SVG-1.1/filters-turb-02-f.svg svg/W3C-SVG-1.1/filters-turb-01-f.svg svg/W3C-SVG-1.1-SE/types-dom-04-b.svg
EWS Watchlist
Comment 9 2017-11-18 14:06:34 PST
Created attachment 327325 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Simon Fraser (smfr)
Comment 10 2017-11-18 14:14:46 PST
Fixed the actual output string, so tests now pass. https://trac.webkit.org/changeset/225020/webkit
Radar WebKit Bug Importer
Comment 11 2017-11-18 14:15:38 PST
Note You need to log in before you can comment on or make changes to this bug.