More FETurbulence cleanup https://bugs.webkit.org/show_bug.cgi?id=179863

Reviewed by Zalan Bujtas.

Source/WebCore:

Hoist computation of initial StitchData up to be done once per filter,
not once per pixel. Passing initial StitchData by value to calculateTurbulenceValueForPoint()
ensures that each pixel gets the initial state.

Also, adjusted baseFrequencyX and baseFrequencyY can be computed just once at the start,
and passed through via PaintingData.

Change enum TurbulenceType to be an enum class (requiring casts in a couple of places)
and undo the capitalization of the values.

Fix spelling of TURBULANCE -> TURBULENCE in test output.

* platform/graphics/filters/FETurbulence.cpp:
(WebCore::FETurbulence::computeStitching const):
(WebCore::FETurbulence::calculateTurbulenceValueForPoint const):
(WebCore::FETurbulence::fillRegion const):
(WebCore::FETurbulence::fillRegionWorker):
(WebCore::FETurbulence::platformApplySoftware):
(WebCore::operator<<):
* platform/graphics/filters/FETurbulence.h:
(WebCore::FETurbulence::PaintingData::PaintingData):
(WebCore::FETurbulence::StitchData::StitchData): Deleted.
* svg/SVGAnimatedEnumeration.cpp:
(WebCore::enumerationValueForTargetAttribute):
* svg/SVGFETurbulenceElement.cpp:
(WebCore::SVGFETurbulenceElement::SVGFETurbulenceElement):
(WebCore::SVGFETurbulenceElement::parseAttribute):
* svg/SVGFETurbulenceElement.h:
(WebCore::SVGPropertyTraits<TurbulenceType>::highestEnumValue):
(WebCore::SVGPropertyTraits<TurbulenceType>::toString):
(WebCore::SVGPropertyTraits<TurbulenceType>::fromString):

LayoutTests:

Fix spelling of TURBULANCE -> TURBULENCE.

* platform/gtk/svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* platform/gtk/svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* platform/gtk/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:
* platform/ios/svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* platform/ios/svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* platform/ios/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:
* platform/mac/svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* platform/mac/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:
* platform/win/svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* platform/win/svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* platform/win/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:
* platform/wpe/svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* platform/wpe/svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* platform/wpe/svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:
* svg/W3C-SVG-1.1-SE/types-dom-04-b-expected.txt:
* svg/W3C-SVG-1.1/filters-turb-01-f-expected.txt:
* svg/W3C-SVG-1.1/filters-turb-02-f-expected.txt:

Canonical link: https://commits.webkit.org/195889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225020 268f45cc-cd09-0410-ab3c-d52691b4dbfc